--- a/src/main/resources/templates/evenement/evenementRucheAjoutListe.html
+++ b/src/main/resources/templates/evenement/evenementRucheAjoutListe.html
@@ -6,7 +6,7 @@
 <link th:replace="include :: cssjquerydaterangepicker"/>
 <script th:src="@{/js/ruches/evenementListe.js}"></script>
 <script th:inline="javascript">
-	const Evenements = /*[[#{evenements}]]*/ null;
+	const Evenements = /*[[#{evenementsrucheajout}]]*/ null;
 	const buttontextprint = /*[[#{buttontextprint}]]*/null;
 	const buttontextcol = /*[[#{buttontextcol}]]*/null;
 	$(document).ready(function() {
@@ -21,7 +21,8 @@
 	<br />
 	<div class="container-fluid">
 		<div class="row">
-			<div class="col" th:text="#{evenementsrucheajout}">
+			<div class="col">
+				<h1 class="item" th:text="#{evenementsrucheajout}">
 			</div>
 			<div th:insert="includeForm :: evenementListeDates(retController='/evenement/rucher/listeRucheAjout')" class="col">
 			</div>
