EvenementSucreListe Ajout contenu du champ de recherche au titre du pdf

--- a/src/main/resources/templates/evenement/evenementRucheAjoutListe.html
+++ b/src/main/resources/templates/evenement/evenementRucheAjoutListe.html
@@ -22,7 +22,7 @@
 	<div class="container-fluid">
 		<div class="row">
 			<div class="col">
-				<h1 class="item" th:text="#{evenementsrucheajout}">
+				<h1 class="item" th:text="#{evenementsrucheajout}"></h1>
 			</div>
 			<div th:insert="includeForm :: evenementListeDates(retController='/evenement/rucher/listeRucheAjout')" class="col">
 			</div>
