--- a/src/main/resources/templates/evenement/evenementTraitementListe.html
+++ b/src/main/resources/templates/evenement/evenementTraitementListe.html
@@ -27,7 +27,7 @@
 	<div class="container-fluid">
 		<div class="row">
 			<div id="titre" class="col">
-				<h1 class="item" th:text="${tous} ? #{traitement} : #{eveDebutTraitement}">
+				<h1 class="item" th:text="${tous} ? #{traitement} : #{eveDebutTraitement}"></h1>
 			</div>
 			<div class="col">
 				<span class="padicons"> <input type="checkbox" id="groupe"
