--- a/src/main/resources/templates/evenement/evenementCadreRucheListe.html
+++ b/src/main/resources/templates/evenement/evenementCadreRucheListe.html
@@ -22,7 +22,7 @@
 	<div class="container-fluid">
 		<div class="row">
 			<div class="col">
-				<h1 class="item" th:text="#{evenementcadreruche}">
+				<h1 class="item" th:text="#{evenementcadreruche}"></h1>
 			</div>
 			<div th:insert="includeForm :: evenementListeDates(retController='/evenement/ruche/listeCadreRuche')" class="col">
 			</div>
