--- a/src/main/resources/templates/evenement/evenementRemplissageHausseListe.html
+++ b/src/main/resources/templates/evenement/evenementRemplissageHausseListe.html
@@ -22,7 +22,7 @@
 	<div class="container-fluid">
 		<div class="row">
 			<div class="col">
-				<h1 class="item" th:text="#{evenementremplissagehausse}">
+				<h1 class="item" th:text="#{evenementremplissagehausse}"></h1>
 			</div>
 			<div th:insert="includeForm :: evenementListeDates(retController='/evenement/hausse/listeRemplissageHausse')" class="col">
 			</div>
