--- a/src/main/resources/templates/evenement/evenementTraitementDetail.html
+++ b/src/main/resources/templates/evenement/evenementTraitementDetail.html
@@ -1,16 +1,17 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
-<head
-	th:replace="include :: common_header(~{::script},~{::style},~{::link})">
-<script th:inline="javascript">
-	const suppeve = /*[[#{supprimerevenement}]]*/null;
-	$(document).ready(function() {
-		$('.confirmation').on('click', function() {
-			return confirm(suppeve);
+
+<head th:replace="include :: common_header(~{::script},~{::style},~{::link})">
+	<script th:inline="javascript">
+		const suppeve = /*[[#{supprimerevenement}]]*/null;
+		$(document).ready(function () {
+			$('.confirmation').on('click', function () {
+				return confirm(suppeve);
+			});
 		});
-	});
-</script>
+	</script>
 </head>
+
 <body>
 	<nav th:replace="include :: navbar">Menu</nav>
 	<br />
@@ -20,35 +21,27 @@
 		<div class="row">
 			<div class="col">
 				<h1 class="item">
-					<a th:if="${type}==''" th:href="@{'/evenement/liste'}"
-						th:text="#{evenement}"></a> <a th:if="${type}=='essaim'"
-						th:href="@{'/evenement/essaim/'+${evenement.essaim.id}}"
+					<a th:if="${type}==''" th:href="@{'/evenement/liste'}" th:text="#{evenement}"></a> <a
+						th:if="${type}=='essaim'" th:href="@{'/evenement/essaim/'+${evenement.essaim.id}}"
 						th:text="#{evenement}"></a> <a th:if="${type=='traitement'}"
-						th:href="@{'/evenement/essaim/listeTraitement'}"
-						th:text="#{evenementstraitement}"></a>
-					<th:block
-						th:text="' '+${#temporals.format(evenement.date, 'yyyy/MM/dd HH:mm')}"></th:block>
+						th:href="@{'/evenement/essaim/listeTraitement'}" th:text="#{evenementstraitement}"></a>
+					<th:block th:text="' '+${#temporals.format(evenement.date, 'yyyy/MM/dd HH:mm')}"></th:block>
 				</h1>
 			</div>
 			<div class="col">
-				<a
-					th:href="@{'/evenement/essaim/traitement/modifie/'+${evenement.id}}">
-					<span class="bi-pencil" th:title="#{modifier}"
-					aria-hidden="true"></span>
+				<a th:href="@{'/evenement/essaim/traitement/modifie/'+${evenement.id}}">
+					<span class="bi-pencil" th:title="#{modifier}" aria-hidden="true"></span>
 				</a>&nbsp; <a th:href="@{'/evenement/modifie/'+${evenement.id}+'?complet=true'}"> <span
-					class="bi-pencil" style="color: red" th:title="#{modifierTout}"
-					aria-hidden="true"></span>
-				</a> <a id="supprime"
-					th:href="@{'/evenement/supprime/'+${evenement.id}}"> <span
-					class="confirmation bi-trash" style="color: red"
-					th:title="#{supprimer}" aria-hidden="true"></span>
+						class="bi-pencil" style="color: red" th:title="#{modifierTout}" aria-hidden="true"></span>
+				</a> <a id="supprime" th:href="@{'/evenement/supprime/'+${evenement.id}}"> <span
+						class="confirmation bi-trash" style="color: red" th:title="#{supprimer}"
+						aria-hidden="true"></span>
 				</a>
 			</div>
 		</div>
 	</div>
 	<div class="container-fluid table-responsive">
-		<table class="table table-sm table-bordered table-striped"
-			id="evenements">
+		<table class="table table-sm table-bordered table-striped" id="evenements">
 			<thead>
 				<tr>
 					<th th:text="#{evenement}"></th>
@@ -62,12 +55,9 @@
 			<tbody>
 				<tr>
 					<td th:text="#{${evenement.type}}"></td>
-					<td><a th:href="@{'/ruche/'+${evenement.ruche?.id}}"
-						th:text="${evenement.ruche?.nom}"></a></td>
-					<td><a th:href="@{'/essaim/'+${evenement.essaim?.id}}"
-						th:text="${evenement.essaim?.nom}"></a></td>
-					<td><a th:href="@{'/rucher/'+${evenement.rucher?.id}}"
-						th:text="${evenement.rucher?.nom}"></a></td>
+					<td><a th:href="@{'/ruche/'+${evenement.ruche?.id}}" th:text="${evenement.ruche?.nom}"></a></td>
+					<td><a th:href="@{'/essaim/'+${evenement.essaim?.id}}" th:text="${evenement.essaim?.nom}"></a></td>
+					<td><a th:href="@{'/rucher/'+${evenement.rucher?.id}}" th:text="${evenement.rucher?.nom}"></a></td>
 					<td class="num" th:text="${evenement.valeur}"></td>
 					<td th:text="${evenement.commentaire}"></td>
 				</tr>
@@ -76,4 +66,5 @@
 	</div>
 	<footer th:replace="include::footer"></footer>
 </body>
+
 </html>
