--- a/src/main/resources/templates/ruche/rucheRetraitHausseForm.html
+++ b/src/main/resources/templates/ruche/rucheRetraitHausseForm.html
@@ -1,29 +1,31 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
+
 <head th:replace="include :: common_header(~{::script},~{::style},~{::link})">
-<script th:replace="include :: jsdatetimepicker"></script>
-<link th:replace="include :: cssdatetimepicker"/>
-<script th:replace="include :: localejsdatetimepicker"></script>
-<script th:inline="javascript">
-	$().ready(function() {
-		$("#commentaire").focus();
-		$("#evenementForm").validate({
-			errorClass: 'erreur-form',
-			errorPlacement: function(error, element) {
-			    error.insertBefore(element.closest('div'));
-			},
-			rules : {
-				date : {
-					required : true
+	<script th:replace="include :: jsdatetimepicker"></script>
+	<link th:replace="include :: cssdatetimepicker" />
+	<script th:replace="include :: localejsdatetimepicker"></script>
+	<script th:inline="javascript">
+		$().ready(function () {
+			$("#commentaire").focus();
+			$("#evenementForm").validate({
+				errorClass: 'erreur-form',
+				errorPlacement: function (error, element) {
+					error.insertBefore(element.closest('div'));
 				},
-				commentaire : {
-					maxlength : 255
+				rules: {
+					date: {
+						required: true
+					},
+					commentaire: {
+						maxlength: 255
+					}
 				}
-			}
+			});
 		});
-	});
-</script>
+	</script>
 </head>
+
 <body>
 	<nav th:replace="include :: navbar"></nav>
 	<br />
@@ -33,20 +35,20 @@
 		<div class="row">
 			<div class="col">
 				<h1 class="item">
-				 <th:block th:text="#{hausseXX(${hausse.nom})}"></th:block>
-				  <a th:href="@{'/ruche/hausses/'+${ruche.id}}"
-					th:text="#{retraitDeLaruche(${ruche.nom})}"></a>
-				 	
+					<th:block th:text="#{hausseXX(${hausse.nom})}"></th:block>
+					<a th:href="@{'/ruche/hausses/'+${ruche.id}}" th:text="#{retraitDeLaruche(${ruche.nom})}"></a>
+
 				</h1>
-        	</div>
-        </div>
-    </div>
-	<form action="#" th:action="@{'/ruche/hausse/retrait/'+${ruche.id}+'/'+${hausse.id}}"
-		method="post" id="evenementForm">
+			</div>
+		</div>
+	</div>
+	<form action="#" th:action="@{'/ruche/hausse/retrait/'+${ruche.id}+'/'+${hausse.id}}" method="post"
+		id="evenementForm">
 		<div th:replace="includeForm :: date"></div>
 		<div th:replace="includeForm :: commentaire"></div>
 		<div th:replace="includeForm :: BtnForm"></div>
 	</form>
 	<footer th:replace="include::footer"></footer>
 </body>
+
 </html>
