--- a/src/main/resources/templates/rucher/rucherHisto.html
+++ b/src/main/resources/templates/rucher/rucherHisto.html
@@ -1,32 +1,35 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
-<head
-	th:replace="include :: common_header(~{::script},~{::style},~{::link})">
-<script th:inline="javascript">
-	const url = /*[[@{'/rucher/historique/'}+${rucher.id}+'/']]*/null;
-	const nomrucher = /*[[${rucher.nom}]]*/null;
-	const buttontextprint = /*[[#{buttontextprint}]]*/null;
-	const buttontextcol = /*[[#{buttontextcol}]]*/null;
-	const transhumances = /*[[#{transhumances}]]*/null;
-	const rucher = /*[[#{rucher}]]*/null;
-	$(document).ready(function() {
-		$('#groupe').on('change', function() {
-			location = url + ($(this).is(':checked'));
+
+<head th:replace="include :: common_header(~{::script},~{::style},~{::link})">
+	<script th:inline="javascript">
+		const url = /*[[@{'/rucher/historique/'}+${rucher.id}+'/']]*/null;
+		const nomrucher = /*[[${rucher.nom}]]*/null;
+		const buttontextprint = /*[[#{buttontextprint}]]*/null;
+		const buttontextcol = /*[[#{buttontextcol}]]*/null;
+		const transhumances = /*[[#{transhumances}]]*/null;
+		const rucher = /*[[#{rucher}]]*/null;
+		$(document).ready(function () {
+			$('#groupe').on('change', function () {
+				location = url + ($(this).is(':checked'));
+			});
+			new DataTable('#transhumances', {
+				dom: 'Blftip',
+				scrollX: true,
+				buttons: [
+					'csv',
+					{
+						extend: 'pdf', exportOptions: {columns: ':visible'},
+						title: rucher + ' ' + nomrucher + ' ' + transhumances + " " + (new Date()).toLocaleDateString()
+					},
+					{extend: 'print', text: buttontextprint},
+					{extend: 'colvis', text: buttontextcol}
+				]
+			});
 		});
-	    new DataTable('#transhumances', {
-	    	dom: 'Blftip',
-	    	scrollX: true,
-		    buttons: [
-		    	'csv',
-		    	{extend: 'pdf', exportOptions: {columns: ':visible'}, 
-		    		title: rucher +  ' ' + nomrucher + ' ' + transhumances + " " + (new Date()).toLocaleDateString()},
-		        {extend: 'print', text: buttontextprint},
-		        {extend: 'colvis', text: buttontextcol}
-	        ]
-	    });
-	});
-</script>
+	</script>
 </head>
+
 <body>
 	<nav th:replace="include :: navbar"></nav>
 	<br />
@@ -37,17 +40,13 @@
 			<div class="col">
 				<h1 class="item">
 					<th:block th:text="#{transhumances} + ' '"></th:block>
-					<a th:href="@{'/rucher/'+${rucher.id}}"
-						th:text="#{rucher} + ' ' + ${rucher.nom}"></a>
+					<a th:href="@{'/rucher/'+${rucher.id}}" th:text="#{rucher} + ' ' + ${rucher.nom}"></a>
 				</h1>
 			</div>
 			<div class="col">
-				<a
-					th:href="@{#{urldoc}+'3834_3476563104'}"
-					class="bi-book" th:title="#{Doc}" target="_blank"
-					aria-hidden="true"></a> <span class="padicons"> <input
-					type="checkbox" id="groupe" th:title="#{grouper}"
-					th:checked="${group}" /> <label for="groupe" th:text="#{grouper}"></label>
+				<a th:href="@{#{urldoc}+'3834_3476563104'}" class="bi-book" th:title="#{Doc}" target="_blank"
+					aria-hidden="true"></a> <span class="padicons"> <input type="checkbox" id="groupe"
+						th:title="#{grouper}" th:checked="${group}" /> <label for="groupe" th:text="#{grouper}"></label>
 				</span>
 			</div>
 		</div>
@@ -59,8 +58,7 @@
 					<th th:text="#{date}"></th>
 					<th th:text="#{type}"></th>
 					<th th:text="#{destProv}"></th>
-					<th th:if="${group}" style="background-color: LemonChiffon"
-						th:text="#{nb}"></th>
+					<th th:if="${group}" style="background-color: LemonChiffon" th:text="#{nb}"></th>
 					<th style="background-color: LemonChiffon" th:text="#{ruche}"></th>
 					<th style="background-color: PaleGoldenRod" th:text="#{nb}"></th>
 					<th style="background-color: PaleGoldenRod" th:text="#{etat}"></th>
@@ -68,9 +66,8 @@
 			</thead>
 			<tbody>
 				<tr th:each="hist : ${histo}" th:class="${hist.type} ? 'coloredrow'">
-					<td><a
-						th:text="${#temporals.format(hist.date, 'yyyy/MM/dd HH:mm')}"
-						th:href="@{'/evenement/'+${hist.eveid}+'?type=ajoutruche'}"></a></td>
+					<td><a th:text="${#temporals.format(hist.date, 'yyyy/MM/dd HH:mm')}"
+							th:href="@{'/evenement/'+${hist.eveid}+'?type=ajoutruche'}"></a></td>
 					<td th:text="${hist.type} ? #{Ajout} : #{Retrait}"></td>
 					<td th:text="${#strings.listJoin(#lists.sort(hist.destProv),', ')}"></td>
 					<td th:if="${group}" th:text="${#lists.size(hist.ruche)}"></td>
@@ -82,4 +79,5 @@
 	</div>
 	<footer th:replace="include::footer"></footer>
 </body>
+
 </html>
