--- a/src/main/resources/templates/rucher/rucherRuchesAjoutForm.html
+++ b/src/main/resources/templates/rucher/rucherRuchesAjoutForm.html
@@ -1,39 +1,41 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
+
 <head th:replace="include :: common_header(~{::script},~{::style},~{::link})">
-<script th:replace="include :: jsdatetimepicker"></script>
-<link th:replace="include :: cssdatetimepicker"/>
-<script th:replace="include :: localejsdatetimepicker"></script>
-<script th:inline="javascript">
-	const doitEtreSupA = /*[[#{doitEtreSupA}]]*/null;
-	const dateFirst = /*[[${dateFirst}]]*/null;
-	const timeFirst = /*[[${timeFirst}]]*/null;
-	$().ready(function() {
-		$.validator.addMethod("greaterThan", function(value, element, param) {
-		    return Date.parse(value) > Date.parse(param);
-		}, doitEtreSupA + ' {0}');		
-		$("#evenementForm").validate({
-			errorClass: 'erreur-form',
-			errorPlacement: function(error, element) {
-			    error.insertBefore(element.closest('div'));
-			},
-			rules : {
-				date : {
-					required : true,
-					greaterThan : dateFirst + ' ' + timeFirst
+	<script th:replace="include :: jsdatetimepicker"></script>
+	<link th:replace="include :: cssdatetimepicker" />
+	<script th:replace="include :: localejsdatetimepicker"></script>
+	<script th:inline="javascript">
+		const doitEtreSupA = /*[[#{doitEtreSupA}]]*/null;
+		const dateFirst = /*[[${dateFirst}]]*/null;
+		const timeFirst = /*[[${timeFirst}]]*/null;
+		$().ready(function () {
+			$.validator.addMethod("greaterThan", function (value, element, param) {
+				return Date.parse(value) > Date.parse(param);
+			}, doitEtreSupA + ' {0}');
+			$("#evenementForm").validate({
+				errorClass: 'erreur-form',
+				errorPlacement: function (error, element) {
+					error.insertBefore(element.closest('div'));
 				},
-				commentaire : {
-					maxlength : 255
+				rules: {
+					date: {
+						required: true,
+						greaterThan: dateFirst + ' ' + timeFirst
+					},
+					commentaire: {
+						maxlength: 255
+					}
 				}
-			}
+			});
+			$('#date').datetimepicker({
+				minDate: dateFirst,
+				minTime: timeFirst
+			});
 		});
-		$('#date').datetimepicker({
-			minDate: dateFirst,
-			minTime: timeFirst
-			});  
-	});
-</script>
+	</script>
 </head>
+
 <body>
 	<nav th:replace="include :: navbar"></nav>
 	<br />
@@ -43,22 +45,21 @@
 		<div class="row">
 			<div class="col">
 				<h1 class="item">
-				  <a th:href="@{'/rucher/ruches/'+${rucherId}}"
-					th:text="#{ajoutruches} + ' ' + ${rucher.nom}"></a>
-				<th:block th:text="' ' + #{Ruches} + ' ' + ${ruchesNoms}"></th:block>
+					<a th:href="@{'/rucher/ruches/'+${rucherId}}" th:text="#{ajoutruches} + ' ' + ${rucher.nom}"></a>
+					<th:block th:text="' ' + #{Ruches} + ' ' + ${ruchesNoms}"></th:block>
 				</h1>
-				<p th:text=
-		        	"#{dateDernierAjout} + ' ' + ${#temporals.format(dateTime, 'dd/MM/yyyy HH:mm')}">
-		        </p>
-        	</div>
-        </div>
-    </div>
-	<form action="#" th:action="@{'/rucher/ruches/ajouter/sauve/' + ${rucherId}} + '/' + ${rIds}"
-		method="post" id="evenementForm">
+				<p th:text="#{dateDernierAjout} + ' ' + ${#temporals.format(dateTime, 'dd/MM/yyyy HH:mm')}">
+				</p>
+			</div>
+		</div>
+	</div>
+	<form action="#" th:action="@{'/rucher/ruches/ajouter/sauve/' + ${rucherId}} + '/' + ${rIds}" method="post"
+		id="evenementForm">
 		<div th:replace="includeForm :: date"></div>
 		<div th:replace="includeForm :: commentaire"></div>
 		<div th:replace="includeForm :: BtnForm"></div>
 	</form>
 	<footer th:replace="include::footer"></footer>
 </body>
+
 </html>
